--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Insert title here</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+  <title>Keystroke demo</title>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <script type="text/javascript" src="js/demo.js"></script>
+  <script type="text/javascript" src="js/UI.js"></script>
 </head>
+
 <body>
+  <script type="text/javascript" src=jquery-3.1.0.js></script>
+  <script type="text/javascript">
+  $(function(){
+	  alert("hello jQuery");
+  });
+  </script>
+
   <h1>Main Page for Keystroke Demo</h1>
 
   <script></script>
 
+  <div class="button"><br/><strong>Click Me!</strong></div>
 
   <div class="target">
+    <fieldset>
+      <label for="Text" >Type Something:</label>
+      <input id="Text" type="text">
+    </fieldset>
+
+    <button id="triger">Trigger the handler</button>
   </div>
 
 </body>
