--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -3,24 +3,21 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   <title>Keystroke demo</title>
-  <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="css/style.css"/>
+  <script type="text/javascript" src=jquery-3.1.0.js></script>
+  <script type="text/javascript" src=></script>
   <script type="text/javascript" src="js/demo.js"></script>
   <script type="text/javascript" src="js/UI.js"></script>
 </head>
 
 <body>
-  <script type="text/javascript" src=jquery-3.1.0.js></script>
-  <script type="text/javascript">
-  $(function(){
-	  alert("hello jQuery");
-  });
-  </script>
+
 
   <h1>Main Page for Keystroke Demo</h1>
 
   <script></script>
 
-  <div class="button"><br/><strong>Click Me!</strong></div>
+  <div class="triger"><br/><strong>Click Me!</strong></div>
 
   <div class="target">
     <fieldset>
@@ -30,6 +27,8 @@
 
     <button id="triger">Trigger the handler</button>
   </div>
+  
+  <div id="print-output"></div>
 
 </body>
 </html>
