--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -12,12 +12,9 @@
 
 <body>
 
-
   <h1>Main Page for Keystroke Demo</h1>
 
-  <script></script>
-
-  <div class="triger"><br/><strong>Click Me!</strong></div>
+  <div class="click"><br/><strong>Click Me!</strong></div>
 
   <div class="target">
     <fieldset>
@@ -28,7 +25,7 @@
     <button id="triger">Trigger the handler</button>
   </div>
   
-  <div id="print-output"></div>
+  <div class="print-output" id="output"></div>
 
 </body>
 </html>
