--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -14,7 +14,7 @@
 
   <h1>Main Page for Keystroke Demo</h1>
 
-  <div class="click"><br/><strong>Click Me!</strong></div>
+<!--    <div class="click"><br/><strong>Click Me!</strong></div>-->
 
   <div class="target">
     <fieldset>
@@ -25,6 +25,7 @@
     <button id="triger">Trigger the handler</button>
   </div>
   
+  <h2>Output of Timestamp Data</h2>
   <div class="print-output" id="output"></div>
 
 </body>
