--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -18,8 +18,13 @@
 
   <div class="target">
     <fieldset>
-      <label for="Text" >Type Something:</label>
-      <input id="Text" type="text">
+      <label for="username" >Username:</label>
+      <input id="username" type="text">
+    </fieldset>
+    
+    <fieldset>
+    	<label for="password">Password:</label>
+    	<input id="password" type="text">
     </fieldset>
 
     <button id="triger">Trigger the handler</button>
