--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,7 +5,6 @@
   <title>Keystroke demo</title>
   <link rel="stylesheet" type="text/css" href="css/style.css"/>
   <script type="text/javascript" src=jquery-3.1.0.js></script>
-  <script type="text/javascript" src=></script>
   <script type="text/javascript" src="js/demo.js"></script>
   <script type="text/javascript" src="js/UI.js"></script>
 </head>
@@ -27,7 +26,7 @@
     	<input id="password" type="text">
     </fieldset>
 
-    <button id="triger">Trigger the handler</button>
+    <button id="triger">Login</button>
   </div>
   
   <h2>Output of Timestamp Data</h2>
