--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -29,7 +29,7 @@
     <button id="triger">Login</button>
   </div>
   
-  <h2>Output of Timestamp Data</h2>
+  <h2>Output of Text Typed as Password</h2>
   <div class="print-output" id="output"></div>
 
 </body>
