--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -26,7 +26,8 @@
     	<input id="password" type="text">
     </fieldset>
 
-    <button id="triger">Login</button>
+	<button id="sign up">Sign up</button>
+    <button id="login">Login</button>
   </div>
   
   <h2>Output of Text Typed as Password</h2>
