--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -28,7 +28,7 @@
     </fieldset>
 
 	<button id="sign up">Sign up</button>
-  <button id="login">Login</button>
+    <button id="login">Login</button>
   </div>
   
   <h2 id="h2">The Record Information</h2>
@@ -39,10 +39,13 @@
             <input id="username-typed" type="text" size="50"><br>
             <label for="password-typed">Password-typed:</label>            
             <input id="password-typed" type="text" size="50"><br>
-            <label for="result-backend">Result-backend:</label>            
-            <input id="result-backend" type="text" size="50"><br>
         </fieldset>
     </div>
+
+  <h3 id="h3"> Authentication Result </h3>
+  <p id="p1"></p>
+
+
 
 </body>
 </html>
